--- a/kustomization/overlays/prod/generic-device-plugin/kustomization.yml
+++ b/kustomization/overlays/prod/generic-device-plugin/kustomization.yml
@@ -13,6 +13,10 @@ patches:
   - target:
       kind: DaemonSet
       name: generic-device-plugin
+    path: patches/add_coraltpu.yml
+  - target:
+      kind: DaemonSet
+      name: generic-device-plugin
     path: patches/add_quicksync.yml
 resources:
   - namespace.yml
