purelb does not support Local externalTrafficPolicy

--- a/kustomization/components/traefik/service.yml
+++ b/kustomization/components/traefik/service.yml
@@ -18,7 +18,7 @@ kind: Service
 metadata:
   name: traefik-svc
 spec:
-  externalTrafficPolicy: Local
+  externalTrafficPolicy: Cluster
   ports:
     - name: web
       protocol: TCP
