--- a/host_vars/worker01.hogs.tswn.us.yml
+++ b/host_vars/worker01.hogs.tswn.us.yml
@@ -1,13 +1,12 @@
 ---
 common__interfaces:
-  bonds:
-    - bridge_name: trunk
-      mode: active-backup
-      name: bond0
-      slaves:
-        - mac: a0:36:bc:d9:32:a6                                                         
-          primary: yes
-        - mac: 6c:4b:90:04:6d:83
+  interfaces:
+    # Gigabit interface mac is 6c:4b:90:04:6d:83
+    - mac: a0:36:bc:d9:32:a6
+      name: uplink
+      network:
+        address: 10.11.0.104/23
+        gateway: 10.11.0.1
 
 common__ip_addresses:
   - 10.11.0.104/23
