expose mqtts port on deployment and service for traefik

--- a/kustomization/components/traefik/deployment.yml
+++ b/kustomization/components/traefik/deployment.yml
@@ -43,6 +43,8 @@ spec:
               containerPort: 443
             - name: dashboard
               containerPort: 8080
+            - name: mqtts
+              containerPort: 8883
             - name: metrics
               containerPort: 9090
           volumeMounts:
