add a readiness probe to mosquitto as a health check

--- a/kustomization/components/mosquitto/configmap/default-config/mosquitto.conf
+++ b/kustomization/components/mosquitto/configmap/default-config/mosquitto.conf
@@ -1,7 +1,16 @@
-listener 1883
-
+# Log to the container's stdout, and include a useful timestamp.
 log_dest stdout
 log_timestamp_format %Y-%m-%dT%H:%M:%S
+
+# Allow different auth per listener.  This is helpful for our liveness probe.
+per_listener_settings true
+
+# This listener exists just for a liveness probe!
+listener 0 /mosquitto/socket
+allow_anonymous true
+
+# Default Listener
+listener 1883
 
 password_file /mosquitto/data/password.conf
 
