--- a/requirements.yml
+++ b/requirements.yml
@@ -21,5 +21,8 @@ collections:
     version: 8.8.0
   - name: kubernetes.core
     version: 2.4.0
+  - name: https://github.com/marinatedconcrete/config.git#/ansible/
+    type: git
+    version: main
   - name: vyos.vyos
     version: 4.1.0
