manage kubectrl install

--- a/renovate.json
+++ b/renovate.json
@@ -58,12 +58,12 @@
     },
     {
       "customType": "regex",
-      "datasourceTemplate": "github-releases",
       "fileMatch": [
         "^roles/devsetup/tasks/main\\.yml$"
       ],
       "matchStrings": [
-        "(?:sha256|targz):\\s+\"https://github\\.com/(?<depName>.*?)/releases/download/(?<currentValue>.*?)/"
+        "#\\s+renovate:\\s+datasource=(?<datasource>.*?)\\s+(?:bin|sha256|targz):\\s+\"?https://github\\.com/(?<depName>.*?)/releases/download/(?<currentValue>.*?)/",
+        "#\\s+renovate:\\s+datasource=(?<datasource>.*?)\\s+depName=(?<depName>.*?)\\s+(?:bin|sha256|targz):\\s+\"?https://.*/(?<currentValue>v.*?)/"
       ]
     },
     {
