--- a/kustomization/overlays/prod/argo-proj/application/operators.yml
+++ b/kustomization/overlays/prod/argo-proj/application/operators.yml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: olm-operators
+  name: operators
   namespace: argocd
 spec:
   project: default
