move mosquitto to a statefulset from a deployment

--- a/kustomization/components/mosquitto/kustomization.yml
+++ b/kustomization/components/mosquitto/kustomization.yml
@@ -13,6 +13,5 @@ images:
   - name: eclipse-mosquitto
     newTag: 2.0.18
 resources:
-  - persistentvolumeclaim.yml
-  - deployment.yml
+  - statefulset.yml
   - service.yml
