set the right storage class on the pvc template for mosquitto

--- a/kustomization/overlays/prod/homeassistant/kustomization.yml
+++ b/kustomization/overlays/prod/homeassistant/kustomization.yml
@@ -14,6 +14,10 @@ patches:
     target:
       kind: StatefulSet
       name: mosquitto-statefulset
+  - path: patches/mosquitto/set_mosquitto_pvc_storageClassName.yml
+    target:
+      kind: StatefulSet
+      name: mosquitto-statefulset
 resources:
   - namespace.yml
   - ingressroutetcp.yml
