--- a/kustomization/overlays/prod/prometheus/kustomization.yml
+++ b/kustomization/overlays/prod/prometheus/kustomization.yml
@@ -2,6 +2,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+components:
+  - ../../../components/prometheus-operator
+namespace: prometheus
 patches:
   - path: patches/change_ingress_host.yml
     target:
