--- a/kustomization/overlays/prod/prometheus/kustomization.yml
+++ b/kustomization/overlays/prod/prometheus/kustomization.yml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 components:
+  - ../../../components/prometheus
   - ../../../components/prometheus-operator
 namespace: prometheus
 patches:
@@ -15,4 +16,5 @@ patches:
       kind: Ingress
       name: prometheus-ingress
 resources:
-  - ../../../base/prometheus
+  - namespace.yml
+  - servicemonitor.yml
