--- a/kustomization/overlays/prod/prometheus/namespace.yml
+++ b/kustomization/overlays/prod/prometheus/namespace.yml
@@ -2,4 +2,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
+  labels:
+    pod-security.kubernetes.io/enforce: restricted
+    pod-security.kubernetes.io/enforce-version: latest
   name: prometheus
