--- a/kustomization/components/multus/kustomization.yml
+++ b/kustomization/components/multus/kustomization.yml
@@ -3,5 +3,5 @@ apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 
 resources:
-  # renovate: github-releases
+  # renovate: datasource=github-releases
   - https://raw.githubusercontent.com/k8snetworkplumbingwg/multus-cni/v4.0.2/deployments/multus-daemonset-thick.yml
