--- a/kustomization/components/prometheus-operator/kustomization.yml
+++ b/kustomization/components/prometheus-operator/kustomization.yml
@@ -3,5 +3,5 @@ apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 
 resources:
-  # renovate: github-releases
+  # renovate: datasource=github-releases
   - https://github.com/prometheus-operator/prometheus-operator/releases/download/v0.68.0/bundle.yaml
