--- a/kustomization/overlays/prod/kubevirt/kustomization.yml
+++ b/kustomization/overlays/prod/kubevirt/kustomization.yml
@@ -6,3 +6,5 @@ components:
   - ../../../components/kubevirt-operator
   - ../../../components/multus
 namespace: kubevirt
+resources:
+  - kubevirt.yml
