--- a/kustomization/base/calico/installation.yml
+++ b/kustomization/base/calico/installation.yml
@@ -10,7 +10,9 @@ spec:
     ipPools:
       - blockSize: 26
         cidr: 172.16.0.0/16
-        encapsulation: VXLAN
+        encapsulation: VXLANCrossSubnet
+        natOutgoing: Enabled
+        nodeSelector: all()
     linuxDataplane: BPF
   controlPlaneNodeSelector:
     node-role.kubernetes.io/control-plane: "true"
