reshuffle calico stuff

--- a/kustomization/components/tigera-operator/kustomization.yml
+++ b/kustomization/components/tigera-operator/kustomization.yml
@@ -5,3 +5,4 @@ kind: Component
 resources:
   # renovate: datasource=github-releases
   - https://raw.githubusercontent.com/projectcalico/calico/v3.26.3/manifests/tigera-operator.yaml
+  - apiserver.yml
