Pin multus image
Unfortunately, the image in the daemonset for v4.0.2 uses a snapshot
that is effectively latest.  This change pins to `v4.0.2-thick` to match
the deployment being used.  See
https://github.com/k8snetworkplumbingwg/multus-cni/issues/1170 for more
details.

--- a/renovate.json
+++ b/renovate.json
@@ -10,6 +10,13 @@
         "quay.io/kairos/kairos-ubuntu-22-lts"
       ],
       "versioning": "regex:^v?(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-k3sv\\d+\\.\\d+\\.\\d+\\+k3s\\d+$"
+    },
+    {
+      "groupName": "multus",
+      "matchFileNames": [
+        "kustomization/components/multus/kustomization.yml"
+      ],
+      "minimumReleaseAge": "1 month"
     }
   ],
   "customManagers": [
