--- a/kustomization/components/multus/kustomization.yml
+++ b/kustomization/components/multus/kustomization.yml
@@ -2,6 +2,9 @@
 apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 
+images:
+  - name: ghcr.io/k8snetworkplumbingwg/multus-cni
+    newTag: v4.0.2-thick
 resources:
   # renovate: datasource=github-releases
   - https://raw.githubusercontent.com/k8snetworkplumbingwg/multus-cni/v4.0.2/deployments/multus-daemonset-thick.yml
