add cluster network addons operator

--- a/kustomization/overlays/prod/kubevirt/kustomization.yml
+++ b/kustomization/overlays/prod/kubevirt/kustomization.yml
@@ -4,9 +4,11 @@ kind: Kustomization
 
 components:
   - ../../../components/kubevirt-cdi-operator
+  - ../../../components/kubevirt-cna-operator
   - ../../../components/kubevirt-operator
   - ../../../components/multus
 namespace: kubevirt
 resources:
   - kubevirt.yml
   - cdi.yml
+  - networkaddonsconfig.yml
