--- a/roles/devsetup/tasks/download.yml
+++ b/roles/devsetup/tasks/download.yml
@@ -12,11 +12,13 @@
     owner: sdwilsh
     url: "{{ item.sha256 }}"
   register: fetch_sha256 
+  when: "'sha256' in item"
 - name: Consume sha256
   ansible.builtin.slurp:
     src: "~sdwilsh/.local/download/{{ item.executable }}.sha256"
   changed_when: no
   register: sha256
+  when: "'sha256' in item"
 - name: Fetch archive
   ansible.builtin.get_url:
     checksum: "sha256:{{ sha256['content'] | b64decode | trim }}"
@@ -41,7 +43,14 @@
     group: sdwilsh
     owner: sdwilsh
     url: "{{ item.bin }}"
-  when: "'bin' in item"
+  when: "'bin' in item and 'sha256' in item"
+- name: Fetch Executable No Check
+  ansible.builtin.get_url:
+    dest: "~sdwilsh/.local/download/{{ item.executable }}"
+    group: sdwilsh
+    owner: sdwilsh
+    url: "{{ item.bin }}"
+  when: "'bin' in item and not 'sha256' in item"
 - name: Install Executable
   ansible.builtin.copy:
     dest: ~sdwilsh/.local/bin/
