--- a/roles/devsetup/tasks/main.yml
+++ b/roles/devsetup/tasks/main.yml
@@ -33,16 +33,24 @@
   become: yes
 - name: Download & Install Software
   ansible.builtin.include_tasks:
-    file: sha256-download.yml
+    file: download.yml
   loop:
-    - executable: starship
-      # renovate: datasource=github-releases
-      sha256: "https://github.com/starship/starship/releases/download/v1.16.0/starship-{{ ansible_architecture }}-unknown-linux-musl.tar.gz.sha256"
-      # renovate: datasource=github-releases
-      targz: "https://github.com/starship/starship/releases/download/v1.16.0/starship-{{ ansible_architecture }}-unknown-linux-musl.tar.gz"
     - executable: kubectl
-      # renovate: datasource=github-releases depName=kubernetes/kubernetes
-      sha256: https://dl.k8s.io/release/v1.28.3/bin/linux/amd64/kubectl.sha256
-      # renovate: datasource=github-releases depName=kubernetes/kubernetes
-      bin: https://dl.k8s.io/release/v1.28.3/bin/linux/amd64/kubectl
+      sha256: "https://dl.k8s.io/release/{{ kubectl_version }}/bin/linux/{{ deb_architecture[ansible_architecture] }}/kubectl.sha256"
+      bin: https://dl.k8s.io/release/{{ kubectl_version }}/bin/linux/{{ deb_architecture[ansible_architecture] }}/kubectl
+    - executable: starship
+      sha256: "https://github.com/starship/starship/releases/download/{{ starship_version }}/starship-{{ ansible_architecture }}-unknown-linux-musl.tar.gz.sha256"
+      targz: "https://github.com/starship/starship/releases/download/{{ starship_version }}/starship-{{ ansible_architecture }}-unknown-linux-musl.tar.gz"
+    - executable: virtctl
+      bin: "https://github.com/kubevirt/kubevirt/releases/download/{{ virtctl_version }}/virtctl-{{ virtctl_version }}-linux-amd64"
+  vars:
+    deb_architecture:
+      x86_64: amd64
+    # renovate: datasource=github-releases depName=kubernetes/kubernetes
+    kubectl_version: v1.28.3
+    # renovate: datasource=github-releases depName=starship/starship
+    starship_version: v1.16.0
+    # renovate: datasource=github-releases depName=kubevirt/kubevirt
+    virtctl_version: v1.0.0
+
 - import_tasks: shell.yml
