--- a/roles/devsetup/tasks/main.yml
+++ b/roles/devsetup/tasks/main.yml
@@ -42,7 +42,7 @@
       sha256: "https://github.com/starship/starship/releases/download/{{ starship_version }}/starship-{{ ansible_architecture }}-unknown-linux-musl.tar.gz.sha256"
       targz: "https://github.com/starship/starship/releases/download/{{ starship_version }}/starship-{{ ansible_architecture }}-unknown-linux-musl.tar.gz"
     - executable: virtctl
-      bin: "https://github.com/kubevirt/kubevirt/releases/download/{{ virtctl_version }}/virtctl-{{ virtctl_version }}-linux-amd64"
+      bin: "https://github.com/kubevirt/kubevirt/releases/download/{{ virtctl_version }}/virtctl-{{ virtctl_version }}-linux-{{ deb_architecture[ansible_architecture] }}"
   vars:
     deb_architecture:
       x86_64: amd64
