add a bridge node to supports virtual machines on all nodes and workers

--- a/kustomization/overlays/prod/calico/kustomization.yml
+++ b/kustomization/overlays/prod/calico/kustomization.yml
@@ -6,4 +6,5 @@ components:
   - ../../../components/tigera-operator
 resources:
   - configmap.yml
+  - felixconfiguration.yml
   - installation.yml
