--- a/host_vars/node01.hogs.tswn.us.yml
+++ b/host_vars/node01.hogs.tswn.us.yml
@@ -1,12 +1,13 @@
 ---
 common__interfaces:
-  interfaces:
-    # Gigabit interface mac is 6c:4b:90:62:87:98
-    - mac: c8:7f:54:93:57:58
-      name: uplink
-      network:
-        address: 10.11.0.101/23
-        gateway: 10.11.0.1
+  bonds:
+    - bridge_name: uplink
+      mode: active-backup
+      name: bond0
+      slaves:
+        - mac: c8:7f:54:93:57:58
+          primary: yes
+        - mac: 6c:4b:90:62:87:98
 
 
 common__ip_addresses:
