Revert "mount should be for db, not data"
This reverts commit 06d3f7bbdc2f76fcd996d4aad4b600d38e5caf1d.

--- a/kustomization/components/unifi-network-application/statefulset.yml
+++ b/kustomization/components/unifi-network-application/statefulset.yml
@@ -110,8 +110,8 @@ spec:
             seccompProfile:
               type: RuntimeDefault
           volumeMounts:
-            - mountPath: /data/db
-              name: db
+            - mountPath: /data
+              name: data
             - mountPath: /docker-entrypoint-initdb.d/init-mongo.js
               name: init-mongodb
               readOnly: true
@@ -155,7 +155,7 @@ spec:
           name: init-mongodb-script
   volumeClaimTemplates:
     - metadata:
-        name: db
+        name: data
       spec:
         accessModes:
           - ReadWriteOnce
